Details
-
Bug
-
Resolution: Fixed
-
Major
-
ReactOS trunk revision r70390 official GCC build.
Description
I got this assertion while starting Firefox 3.6
*** Assertion failed: p->tot_len == p->len
|
*** Source File: /srv/buildbot/Build_GCCLin_x86/build/lib/drivers/ip/transport/tcp/if.c, line 52
|
|
|
Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)?
|
kdb:> b
|
Execute '.cxr F74F689C' to dump context
|
|
|
Entered debugger on embedded INT3 at 0x0008:0x8093f102.
|
kdb:> bt
|
Eip:
|
<NTOSKRNL.EXE:13f103 (:0 (DbgBreakPoint))>
|
Frames:
|
<tcpip.sys:12f75 (lib/drivers/ip/transport/tcp/if.c:52 (TCPSendDataCallback))>
|
<tcpip.sys:1f4cf (lib/drivers/lwip/src/core/ipv4/ip.c:797 (ip_output_if))>
|
<tcpip.sys:1f572 (lib/drivers/lwip/src/core/ipv4/ip.c:834 (ip_output))>
|
<tcpip.sys:229a1 (lib/drivers/lwip/src/core/tcp_out.c:1169 (tcp_output))>
|
<tcpip.sys:2615d (lib/drivers/lwip/src/core/tcp_in.c:383 (tcp_input))>
|
<tcpip.sys:1f2c2 (lib/drivers/lwip/src/core/ipv4/ip.c:574 (ip_input))>
|
<tcpip.sys:1bfaa (lib/drivers/lwip/src/api/tcpip.c:108 (tcpip_thread))>
|
<tcpip.sys:1f6b4 (lib/drivers/lwip/src/sys_arch.c:268 (LwipThreadMain))>
|
<NTOSKRNL.EXE:10b444 (ntoskrnl/ps/thread.c:156 (PspSystemThreadStartup))>
|
Attachments
Issue Links
- is duplicated by
-
CORE-11343 Assertion error after login to Evernote 5.9.8
-
- Resolved
-
-
CORE-11761 BSOD (Assertion failed: p->tot_len == p->len) when Firefox submits error report
-
- Resolved
-
-
CORE-11994 Assert in tcpip!TCPSendDataCallback reactos\sdk\lib\drivers\ip\transport\tcp\if.c @ 52 when downloading file via uTorrent (72707)
-
- Resolved
-
-
CORE-12082 File system corruption with firefox
-
- Resolved
-